--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahmet Topal</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      #ahmet {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .ahmet-container {
+          width: 100%;
+          max-width: 1170px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="ahmet">
+      <div class="ahmet-container">
+        <img src="img/ahmet.png" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
