--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           font-weight: 700;
           font-family: 'Times New Roman', serif;
           margin-top: 50px;
+          letter-spacing: -1px;
       }
       .define {
           font-size: 24px;
@@ -44,7 +45,7 @@
           text-align: center;
           width: 55%;
           line-height: 1.5;
-          margin-top: 25px;
+          margin-top: 15px;
       }
       .buttons {
           display: flex;
