--- a/index.html
+++ b/index.html
@@ -64,6 +64,28 @@
           height: 1px;
           background: #000;
       }
+      @media screen and (max-width: 1279px) {
+          img {
+              width: 40%;
+          }
+          .name {
+              font-size: 33px;
+          }
+          .define {
+              font-size: 16px;
+              width: 75%;
+          }
+          .buttons {
+              margin-top: 30px;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+          }
+          .buttons a {
+              margin: 15px 0;
+              font-size: 13px;
+          }
+      }
     </style>
   </head>
   <body>
@@ -73,11 +95,11 @@
         <div class="name">Ahmet Topal</div>
         <div class="define">Grafik tasarımcı. Ağırlıklı olarak sinema ve eğlence sektörüne afişler tasarlıyor.</div>
         <div class="buttons">
-            <a href="https://www.behance.net/ahmet8topal">Behance</a>
+            <a href="https://www.behance.net/ahmet8topal" target="_blank">Behance</a>
             <div class="line"></div>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ahmet8topal@gmail.com">E-Mail</a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ahmet8topal@gmail.com" target="_blank">E-Mail</a>
             <div class="line"></div>
-            <a href="https://www.linkedin.com/in/ahmet-topal/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/ahmet-topal/" target="_blank">LinkedIn</a>
         </div>
       </div>
     </div>
