update mail link

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="buttons">
             <a href="https://www.behance.net/ahmet8topal" target="_blank">Behance</a>
             <div class="line"></div>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ahmet8topal@gmail.com" target="_blank">E-Mail</a>
+            <a href="mailto:ahmet8topal@gmail.com" target="_blank">E-Mail</a>
             <div class="line"></div>
             <a href="https://www.linkedin.com/in/ahmet-topal/" target="_blank">LinkedIn</a>
         </div>
